--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <img src="1.jpg" width="700" height="1000" alt=""/>
 <img src="2.jpg" width="700" height="1000" alt=""/>
 <img src="3.jpg" width="700" height="1000" alt=""/>
+<img src="vinos.jpg" width="700" height="1000" alt=""/>
 <img src="4.jpg" width="700" height="1000" alt=""/>
 <img src="5.jpg" width="700" height="1249" alt=""/>
 <img src="6.jpg" width="700" height="1404" alt=""/>
